# PikNLP

./: .gitignore  README.md  main.py  pyproject.toml  reviews.csv
config/: config.yaml  train_category_config.yaml  train_config.yaml
legacy/model/src/: train.py
piknlp/DB/: cli.py  loadReviews.py
piknlp/category/: cli.py
piknlp/common/: config.py  logger.py
piknlp/generator/: cli.py  generator.py  llm.py
piknlp/model/: cli.py  multi_train.py  test.py  train.py
piknlp/schema/: generator.py  train.py
piknlp/sentiment/: cli.py  generator.py  test.py  train.py
