[project]
name = "piknlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alive-progress>=3.2.0",
    "attrdict>=2.0.1",
    "numpy<=2.2.5",
    "ollama>=0.4.8",
    "openai>=1.82.0",
    "pandas>=2.2.3",
    "pydantic>=2.11.5",
    "scikit-learn>=1.6.1",
    "seqeval>=1.2.2",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers<=4.49",
]
